some editings that I don't even know what happened

--- a/straights/straights.vcxproj
+++ b/straights/straights.vcxproj
@@ -78,6 +78,9 @@
     <ClInclude Include="Referee.h" />
     <ClInclude Include="Table.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
