--- a/straights/makefile
+++ b/straights/makefile
@@ -1,11 +1,12 @@
 CXX = g++ 			
-CXXFLAGS = -g -Wall -MMD
-OBJECTS = Card.o Command.o main.o Player.o Referee.o Table.o
+CXXFLAGS = -Wall -O -g `pkg-config gtkmm-2.4 --cflags` -MMD
+LDFLAGS=`pkg-config gtkmm-2.4 --libs`
+OBJECTS = Card.o Command.o main.o Player.o Referee.o Table.o view.o DeckGUI.o Controller.o Observer.o Subject.o Model.o PlayerBox.o
 DEPENDS = ${OBJECTS:.o=.d}
 EXEC = straights
 
 ${EXEC} : ${OBJECTS}
-	${CXX} ${CXXFLAGS} ${OBJECTS} -o ${EXEC}
+	${CXX} ${CXXFLAGS} ${OBJECTS} $(LDFLAGS) -o ${EXEC}
 
 clean :
 	rm -rf ${DEPENDS} ${OBJECTS} ${EXEC}
